--- a/templates/member/login.html.twig
+++ b/templates/member/login.html.twig
@@ -1,25 +1,27 @@
-{% extends "base.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
 
-    <div id="login-container" class="container border rounded" style="margin-top:10%; max-width:750px;">
-        <div style="margin-top:15px; margin-bottom:15px;">
-            <form id="login-formular" action="/login" method="POST">
+    <div class="container" style="margin-top:10%; max-width:750px;">
+        <div class="card">
+            <div class="card-body">
                 <h3>Connexion :</h3>
-                <div class="form-group">
-                    <label>Adresse mail</label>
-                    <input id="email" value="{{ last_typed_email }}" name="emailAddress" type="email" minlength="5" maxlength="128" class="form-control" placeholder="Votre Email" required />
-                </div>
-                <div class="form-group">
-                    <label>Mot de passe</label>
-                    <input id="password" name="password" type="password" minlength="8" maxlength="50" class="form-control" placeholder="Votre mot de passe" required />
-                </div>
-                <button type="submit" class="btn btn-primary btn-dark">Se connecter</button>
-                {{error | default('')}}
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
-            </form>
+                <form action="/login" method="POST">
+                    <div class="form-group">
+                        <label for="email">Adresse mail</label>
+                        <input id="email" value="{{ last_typed_email }}" name="emailAddress" type="email" minlength="5" maxlength="128" class="form-control" placeholder="Votre Email" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Mot de passe</label>
+                        <input id="password" name="password" type="password" minlength="8" maxlength="50" class="form-control" placeholder="Votre mot de passe" required />
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-dark">Se connecter</button>
+                    {{error | default('')}}
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
+                </form>
+            </div>
         </div>
     </div>
 {% endblock %}
