--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -7,6 +7,7 @@
     <div class="container">
         <div class="card">
             <div class="card-body">
+                <h3 class="card-title">Edition de projet :</h3>
                 {{ form_start(form) }}
                 {{ form_errors(form) }}
                 {{ form_row(form.name) }}
