--- a/templates/release/release_form.html.twig
+++ b/templates/release/release_form.html.twig
@@ -1,20 +1,20 @@
 {% extends 'project_frame.html.twig' %}
 
-{% block title %}Création d'un release{% endblock %}
+{% block title %}Création d'une release{% endblock %}
 
 {% block content %}
 
     <div class="container">
-        <div class="container border rounded">
-            <div style="margin-top:5%; margin-bottom:5%;">
+        <div class="card">
+            <div class="card-body">
+                <h3>Créer une release :</h3>
                 {{ form_start(form) }}
-                <h3>Créer un release :</h3>
                 {{ form_errors(form) }}
                 {{ form_row(form.number) }}
                 {{ form_row(form.description) }}
                 {{ form_row(form.date) }}
                 {{ form_row(form.link) }}
-                <button type="submit" class="btn btn-primary">Créer le release</button>
+                <button type="submit" class="btn btn-primary">Créer la release</button>
                 {{ form_end(form) }}
             </div>
         </div>
