--- a/templates/sprint/edit.html.twig
+++ b/templates/sprint/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'project_frame.html.twig' %}
 
-{% block title %}Edition d'une sprint{% endblock %}
+{% block title %}Edition d'un sprint{% endblock %}
 
 {% block content %}
 
     <div class="container">
-        <div class="container border rounded">
-            <div style="margin-top:5%; margin-bottom:5%;">
-                {{ form_start(form) }}
+        <div class="card">
+            <div class="card-body">
                 <h3>Editer un sprint :</h3>
+                {{ form_start(form) }}
                 {{ form_errors(form) }}
                 {{ form_row(form.name) }}
                 {{ form_row(form.description) }}
