--- a/templates/sprint/sprint_form.html.twig
+++ b/templates/sprint/sprint_form.html.twig
@@ -5,10 +5,10 @@
 {% block content %}
 
     <div class="container">
-        <div class="container border rounded">
-            <div style="margin-top:5%; margin-bottom:5%;">
-                {{ form_start(form) }}
+        <div class="card">
+            <div class="card-body">
                 <h3>Créer un sprint :</h3>
+                {{ form_start(form) }}
                 {{ form_errors(form) }}
                 {{ form_row(form.name) }}
                 {{ form_row(form.description) }}
