--- a/templates/task/task_form.html.twig
+++ b/templates/task/task_form.html.twig
@@ -6,6 +6,7 @@
     <div class="container">
         <div class="card">
             <div class="card-body">
+                <h3>Création d'une tâche</h3>
                 {{ form_start(form) }}
                 {{ form_errors(form) }}
                 {{ form_row(form.number) }}
