--- a/templates/test/edit.html.twig
+++ b/templates/test/edit.html.twig
@@ -4,11 +4,11 @@
 
 {% block content %}
 
-    <div id="edit-test-container" class="container">
-        <div class="container border rounded">
-            <div style="margin-top:5%; margin-bottom:5%;">
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h3>Editer un test :</h3>
                 {{ form_start(form) }}
-                <h3>Editer une test :</h3>
                 {{ form_errors(form) }}
                 {{ form_row(form.name) }}
                 {{ form_row(form.description) }}
