--- a/templates/test/test_form.html.twig
+++ b/templates/test/test_form.html.twig
@@ -4,11 +4,11 @@
 
 {% block content %}
 
-    <div id="new-test-container" class="container">
-        <div class="container border rounded">
-            <div style="margin-top:5%; margin-bottom:5%;">
-                {{ form_start(form) }}
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
                 <h3>Créer un test :</h3>
+                {{ form_start(form) }}
                 {{ form_errors(form) }}
                 {{ form_row(form.name) }}
                 {{ form_row(form.description) }}
