Correction du nommage des variables dans les templates

--- a/templates/sprint/edit.html.twig
+++ b/templates/sprint/edit.html.twig
@@ -10,7 +10,7 @@
                 <h3>Editer un sprint :</h3>
                 {{ form_start(form) }}
                 {{ form_errors(form) }}
-                {{ form_row(form.name) }}
+                {{ form_row(form.number) }}
                 {{ form_row(form.description) }}
                 {{ form_row(form.startDate) }}
                 {{ form_row(form.endDate) }}
