--- a/templates/issue/edit.html.twig
+++ b/templates/issue/edit.html.twig
@@ -10,7 +10,7 @@
                 <h3>Editer une issue :</h3>
                 {{ form_start(form) }}
                 {{ form_errors(form) }}
-                {{ form_row(form.name) }}
+                {{ form_row(form.number) }}
                 {{ form_row(form.description) }}
                 {{ form_row(form.difficulty) }}
                 {{ form_row(form.priority) }}
