--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -14,7 +14,7 @@
                             <li class="list-group-item">
                                 <div class="row">
                                     <div class="col-md-6 col-lg-8">
-                                        <div class="font-weight-bold">{{ issue.name }} - {{ issue.description }}</div>
+                                        <div class="font-weight-bold">{{ issue.number }} - {{ issue.description }}</div>
                                         <div class="text-muted small">
                                             <span>Difficulté :</span>
                                             <span class="font-weight-bold">{{ issue.difficulty }}</span>
@@ -35,7 +35,7 @@
                                     <h3>Veuillez confirmer la suppression</h3>
                                 {% endblock %}
                                 {% block body %}
-                                    <p>Êtes-vous sûr(e) de vouloir supprimer l'issue {{ issue.name }}</p>
+                                    <p>Êtes-vous sûr(e) de vouloir supprimer l'issue {{ issue.number }}</p>
                                 {% endblock %}
                                 {% block footer %}
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
