Changement de la relation entre Release et Sprint et correction du listing des taches

--- a/templates/release/edit.html.twig
+++ b/templates/release/edit.html.twig
@@ -13,6 +13,7 @@
                 {{ form_row(form.number) }}
                 {{ form_row(form.description) }}
                 {{ form_row(form.date) }}
+                {{ form_row(form.sprint) }}
                 {{ form_row(form.link) }}
                 <button type="submit" class="btn btn-primary">Créer la release</button>
                 {{ form_end(form) }}
