Issue id:39 - Ajout du burn down chart et optimisation des statistiques

--- a/templates/graph.html.twig
+++ b/templates/graph.html.twig
@@ -7,7 +7,7 @@
         // specify chart configuration item and data
         var option = {
             title: {
-                text: 'Proportion d\'issue par {{ title }}'
+                text: 'Proportion {{ title }}'
             },
             tooltip: {},
             legend: {
