--- a/templates/issue/issue_form.html.twig
+++ b/templates/issue/issue_form.html.twig
@@ -15,6 +15,7 @@
                 {{ form_row(form.difficulty) }}
                 {{ form_row(form.priority,{'label': 'Priorité'},{ 'separator': '----------' }) }}
                 {{ form_row(form.status,{'label': 'Statut'},{ 'separator': '----------' }) }}
+                {{ form_row(form.sprint) }}
                 <button type="submit" class="btn btn-primary">Créer l'issue</button>
                 {{ form_end(form) }}
             </div>
