--- a/templates/sprint/sprint_list.html.twig
+++ b/templates/sprint/sprint_list.html.twig
@@ -49,5 +49,9 @@
             </div>
         </div>
     </div>
+
+    {% set title = "Burn Down Charte" %}
+    {% set statistic = burnDownStat %}
+    {% include 'graph.html.twig' %}
 {% endblock %}
 
