Amélioration du code des formulaires

--- a/templates/release/edit.html.twig
+++ b/templates/release/edit.html.twig
@@ -15,7 +15,7 @@
                 {{ form_row(form.date) }}
                 {{ form_row(form.sprint) }}
                 {{ form_row(form.link) }}
-                <button type="submit" class="btn btn-primary">Créer la release</button>
+                <button type="submit" class="btn btn-primary">Modifier la release</button>
                 {{ form_end(form) }}
             </div>
         </div>
