--- a/templates/issue/edit.html.twig
+++ b/templates/issue/edit.html.twig
@@ -15,6 +15,7 @@
                 {{ form_row(form.difficulty) }}
                 {{ form_row(form.priority) }}
                 {{ form_row(form.status) }}
+                {{ form_row(form.sprint) }}
                 <button type="submit" class="btn btn-primary">Modifier l'issue</button>
                 <a class="btn btn-outline-danger" href="{{ path('issuesList', {'id_project' : project.id}) }}">Annuler</a>
                 {{ form_end(form) }}
