Amélioration des controllers partie 2

--- a/templates/project_frame.html.twig
+++ b/templates/project_frame.html.twig
@@ -97,7 +97,7 @@
         </div>
         <div id="content">
             {% if project is defined and project is not null %}
-            <h1 style="padding-top:5%; text-align:center; margin-bottom: 10%;">
+            <h1 style="padding-top:100px; text-align:center; margin-bottom: 10%;">
             {{ project.getName() }}
             </h1>
             {% endif %}
