--- a/templates/project/dashboard.html.twig
+++ b/templates/project/dashboard.html.twig
@@ -14,6 +14,17 @@
             {% endfor %}
         </div>
     {% endif %}
+    {% if myPlanningPokers is not empty %}
+        <div id="invitation-list-container" class="container" style="margin-top:10%;">
+            {% for myPlanningPoker in myPlanningPokers %}
+                <div class="alert alert-secondary" role="alert">
+                    <a href="{{ path('planningPoker', {'id_project': myPlanningPoker.task.project.id, 'id_task': myPlanningPoker.task.id}) }}">
+                        Vous êtes invité à faire le planning poker pour la tache {{ myPlanningPoker.task.number }}
+                    </a>
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
 
     <div id="project-list-container" class="container" style="margin-top:10%;">
         <div class="row">
