[Debtfix] changement de enddate de sprint en durée et ajout de l'entity notification

--- a/templates/sprint/sprint_list.html.twig
+++ b/templates/sprint/sprint_list.html.twig
@@ -18,8 +18,8 @@
                                         <div class="text-muted small">
                                             <span>Date de début :</span>
                                             <span class="font-weight-bold">{{ sprint.startDate.format("d/m/Y") }}</span>
-                                            <span>| Date de fin :</span>
-                                            <span class="font-weight-bold">{{ sprint.endDate.format("d/m/Y") }}</span>
+                                            <span>| Durée estimé pour la réalisation :</span>
+                                            <span class="font-weight-bold">{{ sprint.estimatedDuration }}</span>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-4 d-flex justify-content-md-end mt-2 mt-md-0">
