--- a/templates/sprint/edit.html.twig
+++ b/templates/sprint/edit.html.twig
@@ -13,7 +13,7 @@
                 {{ form_row(form.number) }}
                 {{ form_row(form.description) }}
                 {{ form_row(form.startDate) }}
-                {{ form_row(form.endDate) }}
+                {{ form_row(form.estimatedDuration) }}
                 <button type="submit" class="btn btn-primary">Modifier le sprint</button>
                 {{ form_end(form) }}
             </div>
