[Bugfix] correction de l'affichage des messages d'erreurs et de succés

--- a/templates/project/dashboard.html.twig
+++ b/templates/project/dashboard.html.twig
@@ -26,6 +26,8 @@
         </div>
     {% endif %}
 
+    {% include 'components/error_success_msg.html.twig' %}
+
     <div id="project-list-container" class="container" style="margin-top:10%;">
         <div class="row">
             <div class="col-sm-6" >
