--- a/templates/member/login.html.twig
+++ b/templates/member/login.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 
+    {% include 'components/error_success_msg.html.twig' %}
+
     <div class="container" style="margin-top:10%; max-width:750px;">
         <div class="card">
             <div class="card-body">
