--- a/templates/project_frame.html.twig
+++ b/templates/project_frame.html.twig
@@ -95,9 +95,12 @@
                 </li>
             </ul>
         </div>
-        <div id="content">
+        <div id="content" style="padding-top: 10%;">
+
+            {% include 'components/error_success_msg.html.twig' %}
+
             {% if project is defined and project is not null %}
-            <h1 style="padding-top:100px; text-align:center; margin-bottom: 10%;">
+            <h1 style="text-align:center; margin-bottom: 10%; margin-top: 5%;">
             {{ project.getName() }}
             </h1>
             {% endif %}
