--- a/templates/sprint/sprint_list.html.twig
+++ b/templates/sprint/sprint_list.html.twig
@@ -50,8 +50,8 @@
         </div>
     </div>
 
-    {% set title = "Burn Down Charte" %}
+    {% set title = "Burn Down Chart" %}
     {% set statistic = burnDownStat %}
-    {% include 'graph.html.twig' %}
+    {% include 'graph/graph_area.html.twig' %}
 {% endblock %}
 
