--- a/templates/test/test_list.html.twig
+++ b/templates/test/test_list.html.twig
@@ -49,7 +49,7 @@
     </div>
 
     {% set title = "Statut" %}
-    {% include 'graph.html.twig' %}
+    {% include 'graph/graph_column.html.twig' %}
 
 {% endblock %}
 
