--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -17,11 +17,11 @@
                                         <div class="font-weight-bold">{{ issue.number }} - {{ issue.description }}</div>
                                         <div class="text-muted small">
                                             <span>Difficulté :</span>
-                                            <span class="font-weight-bold">{{ issue.difficulty }}</span>
+                                            <span class="font-weight-bold badge badge-light" style="font-size: 110%;">{{ issue.difficulty }}</span>
                                             <span>| Priorité :</span>
-                                            <span class="font-weight-bold">{{ issue.priority }}</span>
+                                            <span class="font-weight-bold badge badge-light" style="font-size: 110%;">{{ issue.priority |capitalize }}</span>
                                             <span>| Statut :</span>
-                                            <span class="font-weight-bold">{{ issue.status }}</span>
+                                            <span class="font-weight-bold {{ getClassForStatus(issue.status)}} badge" style="font-size: 110%;">{{ issue.status |capitalize }}</span>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-4 d-flex justify-content-md-end mt-2 mt-md-0">
