--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -51,23 +51,56 @@
             </div>
         </div>
     </div>
-    <select class="card browser-default custom-select" style="margin: auto; margin-top:5%; max-width:50%; justify-content:center;">
-    <option>Selectionner un champ</option>
-    <option>Statut</option>
-    <option>Difficulté</option>
-    <option>Priorité</option>
+    <select id="select-graph" class="card browser-default custom-select" style="margin: auto; margin-top:5%; max-width:50%; justify-content:center;">
+    <option value="Status">Statut</option>
+    <option value="Priorite">Priorité</option>
+    <option value="Difficulte">Difficulté</option>
     </select>
+
+    <div id="graphic" class="container" style="min-width:500px; min-height:300px; max-height:400px; width:80%; margin: auto; margin-top:10%; justify-content:center;"></div>
+
     {% set title = "Statut" %}
+    {% set function = "Status" %}
     {% set statistic = statusStat %}
     {% include 'graph/graph_column.html.twig' %}
 
     {% set title = "Difficulté" %}
+    {% set function = "Difficulte" %}
     {% set statistic = diffStat %}
     {% include 'graph/graph_column.html.twig' %}
 
     {% set title = "Priorité" %}
+    {% set function = "Priorite" %}
     {% set statistic = prioStat %}
     {% include 'graph/graph_column.html.twig' %}
+
+    <script defer>
+        function showGraph(title) {
+            switch(title){
+                case "Status":
+                    showStatus();
+                break;
+                case "Difficulte":
+                    showDifficulte();
+                break;
+                case "Priorite":
+                    showPriorite();
+                break;
+            }
+        }
+
+        function init() {
+            // ajout d'un écouteur d'évènement
+            var el = document.getElementById("select-graph");
+            el.addEventListener("change", 
+            (event) => showGraph(event.target.value)
+            , false);
+        }
+
+        init();
+        showStatus();
+
+    </script>
     </body>
 {% endblock %}
 
