--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -16,8 +16,10 @@
                                     <div class="col-md-6 col-lg-8">
                                         <div class="font-weight-bold">{{ issue.number }} - {{ issue.description }}</div>
                                         <div class="text-muted small">
-                                            <span>Difficulté :</span>
-                                            <span class="font-weight-bold badge badge-light" style="font-size: 110%;">{{ issue.difficulty }}</span>
+                                            {% if issue.difficulty > 0 %}
+                                                <span>Difficulté :</span>
+                                                <span class="font-weight-bold badge badge-light" style="font-size: 110%;">{{ issue.difficulty }}</span>
+                                            {% endif %}
                                             <span>| Priorité :</span>
                                             <span class="font-weight-bold badge badge-light" style="font-size: 110%;">{{ issue.priority |capitalize }}</span>
                                             <span>| Statut :</span>
