[Issue 37] Amelioration du changement de status des taches avec un drag and drop

--- a/templates/task/_task_details.html.twig
+++ b/templates/task/_task_details.html.twig
@@ -1,4 +1,8 @@
-<li class="mt-2">
+<li id="drag{{ task.id }}"class="mt-2 {{ task.status }}" 
+{% if task.status != 'done' %}
+ondragstart="dragStart(event)" ondrag="dragging(event)" draggable="true" value="{{ path('changeTaskStatus', {'id_project': project.id, 'id_task' : task.id, 'status' : "done"}) }}"
+{% endif %}
+>
     <a class="link collapsed" data-toggle="collapse" href="#taskDetail{{ task.id }}" aria-expanded="false">
         <h4 class="h6 mb-0">
             {{ task.number }}
