--- a/templates/task/_task_details.html.twig
+++ b/templates/task/_task_details.html.twig
@@ -1,6 +1,6 @@
 <li id="drag{{ task.id }}"class="mt-2 {{ task.status }}" 
 {% if task.status != 'done' %}
-ondragstart="dragStart(event)" ondrag="dragging(event)" draggable="true" value="{{ path('changeTaskStatus', {'id_project': project.id, 'id_task' : task.id, 'status' : "done"}) }}"
+ondragstart="dragStart(event)" ondrag="dragging(event)" draggable="true" value="{{ path('changeTaskStatus', {'id_project': project.id, 'id_task' : task.id, 'status' : "done", 'id_sprint':sprint.id}) }}"
 {% endif %}
 >
     <a class="link collapsed" data-toggle="collapse" href="#taskDetail{{ task.id }}" aria-expanded="false">
